# advent-of-code

./: .gitignore  README.md
2018/src/: Util.hs  day1.hs  day10.hs  day11.hs  day12.hs  day13.hs  day14.hs  day15.hs  day16.hs  day17.hs  day18.hs  day19.hs  day2.hs  day20.hs  day21.hs  day22.hs  day23.hs  day24.hs  day25.hs  day3.hs  day4.hs  day5.hs  day6.hs  day7.hs  day8.hs  day9.hs  template.hs
2019/: .gitignore
2019/haskell/: Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day2.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs  Intcode.hs  LICENSE  Utils.hs  aoc2019.cabal
2019/rust/: Cargo.toml
2019/rust/day1/: Cargo.toml
2019/rust/day1/src/: main.rs
2019/rust/day2/: Cargo.toml
2019/rust/day2/src/: main.rs
2019/rust/day3/: Cargo.toml
2019/rust/day3/src/: main.rs
2019/rust/day4/: Cargo.toml
2019/rust/day4/src/: main.rs
2019/rust/day5/: Cargo.toml
2019/rust/day5/src/: main.rs
2019/rust/day6/: Cargo.toml
2019/rust/day6/src/: main.rs
2019/rust/day7/: Cargo.toml
2019/rust/day7/src/: main.rs
2019/rust/day8/: Cargo.toml
2019/rust/day8/src/: main.rs
2019/rust/src/: ext_gcd.rs  intcode.rs  lib.rs  parse_array.rs  sparse.rs
2020/julia/src/: day1.jl  day10.jl  day11.jl  day12.jl  day13.jl  day14.jl  day15.jl  day16.jl  day17.jl  day18.jl  day19.jl  day2.jl  day20.jl  day21.jl  day22.jl  day23.jl  day24.jl  day25.jl  day3.jl  day4.jl  day5.jl  day6.jl  day7.jl  day8.jl  day9.jl
2021/racket/: day1.rkt  day10.rkt  day11.rkt  day12.rkt  day13.rkt  day14.rkt  day15.rkt  day16.rkt  day17.rkt  day18.rkt  day19.rkt  day2.rkt  day20.rkt  day21.rkt  day22.rkt  day23.rkt  day24.rkt  day25.rkt  day3.rkt  day4.rkt  day5.rkt  day6.rkt  day7.rkt  day8.rkt  day9.rkt  flake.nix
