name:                aoc2019
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Ben Price
maintainer:          ben@brprice.uk
build-type:          Simple
cabal-version:       2.0
synopsis:            Solutions to Advent of Code 2019
description:         Solutions to Advent of Code 2019 (https://adventofcode.com/2019)
category:            ACME

executable day1
  main-is:             Day1.hs
  build-depends:       base ^>=4.12,
                       bytestring ^>=0.10,
                       conduit ^>= 1.3
  default-language:    Haskell2010

executable day2
  main-is:             Day2.hs
  build-depends:       base ^>=4.12,
                       vector ^>=0.12
  default-language:    Haskell2010

executable day3
  main-is:             Day3.hs
  build-depends:       base ^>=4.12,
                       extra ^>=1.6
  default-language:    Haskell2010
