name:                aoc2019
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Ben Price
maintainer:          ben@brprice.uk
build-type:          Simple
cabal-version:       2.0
synopsis:            Solutions to Advent of Code 2019
description:         Solutions to Advent of Code 2019 (https://adventofcode.com/2019)
category:            ACME

executable day1
  main-is:             Day1.hs
  build-depends:       base ^>=4.12,
                       bytestring ^>=0.10,
                       conduit ^>= 1.3
  default-language:    Haskell2010

executable day2
  main-is:             Day2.hs
  other-modules:       Intcode
  build-depends:       base ^>=4.12,
                       containers^>=0.6,
                       mtl ^>=2.2
  default-language:    Haskell2010

executable day3
  main-is:             Day3.hs
  build-depends:       base ^>=4.12,
                       extra ^>=1.6
  default-language:    Haskell2010

executable day4
  main-is:             Day4.hs
  build-depends:       base ^>=4.12
  default-language:    Haskell2010

executable day5
  main-is:             Day5.hs
  other-modules:       Intcode
  build-depends:       base ^>=4.12,
                       containers^>=0.6,
                       mtl ^>=2.2
  default-language:    Haskell2010

executable day6
  main-is:             Day6.hs
  build-depends:       base ^>=4.12,
                       containers^>=0.6
  default-language:    Haskell2010

executable day7
  main-is:             Day7.hs
  other-modules:       Intcode
  build-depends:       base ^>=4.12,
                       containers^>=0.6,
                       mtl ^>=2.2
  default-language:    Haskell2010

executable day8
  main-is:             Day8.hs
  build-depends:       base ^>=4.12,
                       extra ^>=1.6
  default-language:    Haskell2010

executable day9
  main-is:             Day9.hs
  other-modules:       Intcode
  build-depends:       base ^>=4.12,
                       containers^>=0.6,
                       mtl ^>=2.2
  default-language:    Haskell2010

executable day10
  main-is:             Day10.hs
  build-depends:       base ^>=4.12,
                       containers^>=0.6
  default-language:    Haskell2010

executable day11
  main-is:             Day11.hs
  other-modules:       Intcode
  build-depends:       base ^>=4.12,
                       containers^>=0.6,
                       lens ^>= 4.18,
                       mtl ^>=2.2
  default-language:    Haskell2010

executable day12
  main-is:             Day12.hs
  build-depends:       base ^>= 4.12,
                       lens ^>= 4.18,
                       megaparsec ^>= 7.0
  default-language:    Haskell2010

executable day13
  main-is:             Day13.hs
  other-modules:       Intcode
  build-depends:       base ^>=4.12,
                       containers^>=0.6,
                       lens ^>= 4.18,
                       mtl ^>=2.2
  default-language:    Haskell2010

executable day14
  main-is:             Day14.hs
  build-depends:       base ^>=4.12,
                       containers^>=0.6,
                       lens ^>= 4.18,
                       megaparsec ^>= 7.0
  default-language:    Haskell2010

executable day15
  main-is:             Day15.hs
  other-modules:       Intcode
  build-depends:       base ^>=4.12,
                       containers^>=0.6,
                       lens ^>= 4.18,
                       mtl ^>=2.2
  default-language:    Haskell2010

executable day16
  main-is:             Day16.hs
  build-depends:       base ^>=4.12
  default-language:    Haskell2010

executable day17
  main-is:             Day17.hs
  other-modules:       Intcode
  build-depends:       base ^>=4.12,
                       containers^>=0.6,
                       mtl ^>=2.2
  default-language:    Haskell2010
